# server.js
@@ -4,6 +4,7 @@ const bodyParser = require('body-parser');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const taskController = require('./controller/task.controller');
+const logger = require('./logger/logger');
 
 // express app initialization
 const app = express();
@@ -16,6 +17,10 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 // routes
 app.get('/api/tasks', (req, res) => {
   taskController.getTasks().then(data => res.json(data));
+});
+
+app.get('/api/tasks/:id', (req, res) => {
+  taskController.getTask(req.params.id).then(data => res.json(data));
 });
 
 app.post('/api/task', (req, res) => {
@@ -36,5 +41,5 @@ app.get('/', (req, res) => {
 });
 
 app.listen(port, () => {
-  log.info(`Server listening on the port  ${port}`);
+  logger.info(`Server listening on the port  ${port}`);
 })
